--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
-@import <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Tilt+Prism&display=swap');
 body {
     background-color: black;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;
         
 }
 .postcard {
     width: 600px;
     height: 450px;
     background-color: white;
+    margin: 50px;
 }
 
 .postcard >.postcard-header{
@@ -42,14 +47,24 @@ body {
     flex-direction: column;
 }
 
+.postcard> .postcard-body>.postcard-body-left > p {
+    font-family: "Roboto";
+}
+
+.postcard > .postcard-body > .postcard-body-right {
+    width: 50%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
 .postcard >.postcard-body>.postcard-body-right > input[type =text]
 {   border: 0;
     border-bottom: 1px solid gray;
     font-size: 20px;
     font-family: "Roboto";
     margin-bottom: 10px;
-    width: 50%;
-    padding: 20px;
+    
 }
 
 .postcard>.postcard-footer {
